<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:onClick="Aceptar"
        android:text="@string/tvLogin"
        app:layout_constraintEnd_toEndOf="@+id/etContraseña"
        app:layout_constraintStart_toStartOf="@+id/etUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/etContraseña"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etUsuario"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:onClick="Aceptar"
        android:text="@string/btnAceptar"
        app:layout_constraintEnd_toEndOf="@+id/etContraseña"
        app:layout_constraintStart_toStartOf="@+id/etContraseña"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

</LinearLayout>